Remove AccessController usage in runtime compiler